Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28277 Qt Creator User Study
  3. QTCREATORBUG-28346

During project creation the wizard should create project folder if it does not exist

XMLWordPrintable

    • 706b0ff9eb (qt-creator/qt-creator/master)

      Current the user is required to create it manually either via the system dialog or some other means.

        For Gerrit Dashboard: QTCREATORBUG-28346
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            mikko.levonmaa Mikko Levonmaa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes