"New Project" wizard: Create project parent directory, if needed

There's no reason to force users to the terminal if they want to create
their project in a new subdirectory.

Fixes: QTCREATORBUG-28346
Change-Id: Id92b2194c018274aac6f7f29c7304efa8c1d2d9e
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>